--- a/nlp-with-python/00-Python-Text-Basics/00-Working-with-Text-Files.ipynb
+++ b/nlp-with-python/00-Python-Text-Basics/00-Working-with-Text-Files.ipynb
@@ -96,10 +96,10 @@
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-3-b2f08335b9e5>, line 3)",
+     "evalue": "f-string: unmatched '[' (3751357111.py, line 3)",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-3-b2f08335b9e5>\"\u001b[1;36m, line \u001b[1;32m3\u001b[0m\n\u001b[1;33m    print(f'Address: {d['a']} Main Street')\u001b[0m\n\u001b[1;37m                         ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  Input \u001b[0;32mIn [3]\u001b[0;36m\u001b[0m\n\u001b[0;31m    print(f'Address: {d['a']} Main Street')\u001b[0m\n\u001b[0m                         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m f-string: unmatched '['\n"
      ]
     }
    ],
@@ -290,10 +290,10 @@
      "evalue": "[Errno 2] No such file or directory: 'whoops.txt'",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-9-410403f4f4b4>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mmyfile\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'whoops.txt'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'whoops.txt'"
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m/Users/ngothai/Documents/ml-labs/nlp-with-python/00-Python-Text-Basics/00-Working-with-Text-Files.ipynb Cell 22\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/ngothai/Documents/ml-labs/nlp-with-python/00-Python-Text-Basics/00-Working-with-Text-Files.ipynb#X30sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m myfile \u001b[39m=\u001b[39m \u001b[39mopen\u001b[39;49m(\u001b[39m'\u001b[39;49m\u001b[39mwhoops.txt\u001b[39;49m\u001b[39m'\u001b[39;49m)\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'whoops.txt'"
      ]
     }
    ],
@@ -316,7 +316,7 @@
     {
      "data": {
       "text/plain": [
-       "'C:\\\\Users\\\\Mike\\\\NLP-Bootcamp\\\\00-Python-Text-Basics'"
+       "'/Users/ngothai/Documents/ml-labs/nlp-with-python/00-Python-Text-Basics'"
       ]
      },
      "execution_count": 10,
@@ -361,7 +361,7 @@
     {
      "data": {
       "text/plain": [
-       "<_io.TextIOWrapper name='test.txt' mode='r' encoding='cp1252'>"
+       "<_io.TextIOWrapper name='test.txt' mode='r' encoding='UTF-8'>"
       ]
      },
      "execution_count": 12,
@@ -390,7 +390,7 @@
     {
      "data": {
       "text/plain": [
-       "'Hello, this is a quick test file.\\nThis is the second line of the file.'"
+       "'Hello, this is a quick test file.\\nThis is the second line of the file.\\n'"
       ]
      },
      "execution_count": 13,
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +442,7 @@
        "0"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -454,16 +454,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Hello, this is a quick test file.\\nThis is the second line of the file.'"
+       "'Hello, this is a quick test file.\\nThis is the second line of the file.\\n'"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -483,16 +483,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Hello, this is a quick test file.\\n', 'This is the second line of the file.']"
+       "['Hello, this is a quick test file.\\n',\n",
+       " 'This is the second line of the file.\\n']"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -512,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -530,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -550,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -559,7 +560,7 @@
        "24"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -571,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -580,7 +581,7 @@
        "'This is a new first line'"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -593,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -610,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -619,7 +620,7 @@
        "23"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -632,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -652,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -669,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -704,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -732,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -740,10 +741,10 @@
      "evalue": "I/O operation on closed file.",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-28-39ca4397fa0a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mtxt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m: I/O operation on closed file."
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m/Users/ngothai/Documents/ml-labs/nlp-with-python/00-Python-Text-Basics/00-Working-with-Text-Files.ipynb Cell 54\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/ngothai/Documents/ml-labs/nlp-with-python/00-Python-Text-Basics/00-Working-with-Text-Files.ipynb#Y104sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m txt\u001b[39m.\u001b[39;49mread()\n",
+      "\u001b[0;31mValueError\u001b[0m: I/O operation on closed file."
      ]
     }
    ],
@@ -760,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -771,7 +772,7 @@
       "This line is being appended to test.txt\n",
       "And another line here.\n",
       "This is more text being appended to test.txt\n",
-      "And another line here."
+      "And another line here.\n"
      ]
     }
    ],
@@ -788,11 +789,16 @@
     "Great! Now you should be familiar with formatted string literals and working with text files.\n",
     "## Next up: Working with PDF Text"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.10.4 ('nlp')",
    "language": "python",
    "name": "python3"
   },
@@ -806,7 +812,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.10.4"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "eab2befb62af694730c981c1dc2e0805f7b79e7dc0c91b58059a91d3c19df925"
+   }
   }
  },
  "nbformat": 4,
