--- a/nlp-with-python/00-Python-Text-Basics/02-Regular-Expressions.ipynb
+++ b/nlp-with-python/00-Python-Text-Basics/02-Regular-Expressions.ipynb
@@ -108,7 +108,7 @@
     {
      "data": {
       "text/plain": [
-       "<_sre.SRE_Match object; span=(12, 17), match='phone'>"
+       "<re.Match object; span=(12, 17), match='phone'>"
       ]
      },
      "execution_count": 5,
@@ -173,7 +173,7 @@
     {
      "data": {
       "text/plain": [
-       "<_sre.SRE_Match object; span=(12, 17), match='phone'>"
+       "<re.Match object; span=(12, 17), match='phone'>"
       ]
      },
      "execution_count": 10,
@@ -446,11 +446,7 @@
     "\n",
     "<tr ><td><span >\\w</span></td><td>Alphanumeric</td><td>\\w-\\w\\w\\w</td><td>A-b_1</td></tr>\n",
     "\n",
-    "\n",
-    "\n",
     "<tr ><td><span >\\s</span></td><td>White space</td><td>a\\sb\\sc</td><td>a b c</td></tr>\n",
-    "\n",
-    "\n",
     "\n",
     "<tr ><td><span >\\D</span></td><td>A non digit</td><td>\\D\\D\\D</td><td>ABC</td></tr>\n",
     "\n",
@@ -1224,7 +1220,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.7.13",
    "language": "python",
    "name": "python3"
   },
@@ -1238,7 +1234,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.7.13"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "d4769b5f4808649e9f6efc2edf9fbe2018aef5c0a679de8e6bc3eb348403e35b"
+   }
   }
  },
  "nbformat": 4,
