--- a/nlp-with-python/01-NLP-Python-Basics/07-NLP-Basics-Assessment-Solution.ipynb
+++ b/nlp-with-python/01-NLP-Python-Basics/07-NLP-Basics-Assessment-Solution.ipynb
@@ -413,7 +413,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.7.13",
    "language": "python",
    "name": "python3"
   },
@@ -427,7 +427,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.7.13"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "d4769b5f4808649e9f6efc2edf9fbe2018aef5c0a679de8e6bc3eb348403e35b"
+   }
   }
  },
  "nbformat": 4,
