--- a/ml-deeplearning/lab_5_Mạng nơ-ron tích chập trong TensorFlow/Lab_5_Mạng_nơ_ron_tích_chập_trong_TensorFlow.ipynb
+++ b/ml-deeplearning/lab_5_Mạng nơ-ron tích chập trong TensorFlow/Lab_5_Mạng_nơ_ron_tích_chập_trong_TensorFlow.ipynb
@@ -5360,7 +5360,7 @@
       "toc_visible": true
     },
     "kernelspec": {
-      "display_name": "Python 3.7.13",
+      "display_name": "Python 3.10.7 64-bit",
       "language": "python",
       "name": "python3"
     },
@@ -5374,11 +5374,11 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.7.13 (default, Mar 28 2022, 07:24:34) \n[Clang 12.0.0 ]"
+      "version": "3.10.7"
     },
     "vscode": {
       "interpreter": {
-        "hash": "d4769b5f4808649e9f6efc2edf9fbe2018aef5c0a679de8e6bc3eb348403e35b"
+        "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
       }
     }
   },
