--- a/ml-deeplearning/lab_1_tensorflow_basic/lab_1_tensorflow_cơ_bản.ipynb
+++ b/ml-deeplearning/lab_1_tensorflow_basic/lab_1_tensorflow_cơ_bản.ipynb
@@ -3586,7 +3586,7 @@
       "toc_visible": true
     },
     "kernelspec": {
-      "display_name": "Python 3.7.13 ('base')",
+      "display_name": "Python 3",
       "language": "python",
       "name": "python3"
     },
@@ -3600,11 +3600,11 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.7.13"
+      "version": "3.10.7 (v3.10.7:6cc6b13308, Sep  5 2022, 14:02:52) [Clang 13.0.0 (clang-1300.0.29.30)]"
     },
     "vscode": {
       "interpreter": {
-        "hash": "c922f6e6419787d491495b8843edb68cd95f680a8b11a4d080a9acd5e0a4e6c8"
+        "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
       }
     }
   },
