--- a/tensorflow-for-mac/check_env_m1.ipynb
+++ b/tensorflow-for-mac/check_env_m1.ipynb
@@ -9,14 +9,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Python Platform: macOS-12.6-arm64-arm-64bit\n",
+      "Python Platform: macOS-13.1-arm64-arm-64bit\n",
       "Tensor Flow Version: 2.10.0\n",
       "Keras Version: 2.10.0\n",
       "\n",
-      "Python 3.9.13 | packaged by conda-forge | (main, May 27 2022, 17:00:33) \n",
-      "[Clang 13.0.1 ]\n",
-      "Pandas 1.5.0\n",
-      "Scikit-Learn 1.1.2\n",
+      "Python 3.9.15 | packaged by conda-forge | (main, Nov 22 2022, 08:48:25) \n",
+      "[Clang 14.0.6 ]\n",
+      "Pandas 1.5.2\n",
+      "Scikit-Learn 1.2.0\n",
       "GPU is available\n"
      ]
     }
@@ -25,10 +25,10 @@
     "# What version of Python do you have?\n",
     "import sys\n",
     "\n",
+    "import tensorflow as tf\n",
     "import tensorflow.keras\n",
     "import pandas as pd\n",
     "import sklearn as sk\n",
-    "import tensorflow as tf\n",
     "import platform\n",
     "\n",
     "print(f\"Python Platform: {platform.platform()}\")\n",
@@ -52,7 +52,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 ('tensorflow')",
+   "display_name": "tensorflow",
    "language": "python",
    "name": "python3"
   },
@@ -66,12 +66,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.15"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "fc51c5a6ccb799575cdcc3b4e764a22fe5f3772426f41cab3cae05a92619a2e3"
+    "hash": "00a7f26ee4e93a763457fa70d05d04bcf09576a5cb744661aa24269e807d63dd"
    }
   }
  },
